--- a/public/index.html
+++ b/public/index.html
@@ -28,3 +28,5 @@
     <script src="cordova.js" type="text/javascript"></script>
   </body>
 </html>
+
+<!--chrome://inspect/#devices  cordova run android -l -c -->
